Fixed left margin width so that the logo doesn't exceed the margin on FireFox.

--- a/html/general.css
+++ b/html/general.css
@@ -35,7 +35,7 @@ div#left-margin {
 	background-color: #000;
 	float:            left;
 	min-height:       110%;
-	width:            163px;
+	width:            191px;
 }
 
 /* Add 1px to width for firefox */
